# rag-ingestion-pipeline

./: .dockerignore  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  README.md  compose.dev.yaml  compose.run.yaml  compose.yaml  justfile  main.py  pyproject.toml  release-please-config.json
.github/workflows/: compose-updater.yml  docker-publish.yml  release-please.yml  (+1 more)
app/: main.py
apps/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/core/: broker.py  config.py  presets.py  redis_client.py
apps/backend/app/features/: __init__.py
apps/backend/app/features/chunk_document/: __init__.py  chunk_worker.py  config.py  controller.py  presets.py  schemas.py  service.py  tasks.py
apps/backend/app/features/document_chunking/: chunk_worker.py  controller.py  schemas.py  service.py  tasks.py
apps/backend/app/features/document_parsing/: controller.py  parse_worker.py  schemas.py  service.py  tasks.py
apps/backend/app/features/embed_document/: __init__.py  config.py  controller.py  embed_worker.py  schemas.py  service.py  tasks.py
apps/backend/app/features/get_presets/: __init__.py  controller.py
apps/backend/app/features/index_document/: __init__.py  config.py  controller.py  index_worker.py  schemas.py  service.py  tasks.py
apps/backend/app/features/parse_document/: __init__.py  config.py  controller.py  parse_worker.py  schemas.py  service.py  tasks.py
apps/backend/app/features/upload_document/: __init__.py  controller.py  schemas.py  service.py
(+52 files in other folders)
