[project]
name = "backend"
version = "0.8.0"
description = "Litestar backend for RAG ingestion pipeline."
requires-python = ">=3.14"
dependencies = [
    "docling>=2.103.0",
    "litestar[standard]>=2.24.0",
    "structlog>=26.1.0",
    "taskiq[reload]>=0.12.4",
    "taskiq-litestar>=0.2.0",
    "taskiq-redis>=1.2.2",
    "torch",
    "torchvision",
    "redis[hiredis]>=7.4.1",
    "chonkie>=1.7.0",
    "langchain-text-splitters>=1.1.2",
    "fastembed>=0.8.0",
    "pyarrow>=25.0.0",
    "qdrant-client>=1.18.0",
    "pillow>=12.3.0",
]
